fix: set text size adjust to 100% on mobile for safari

--- a/src/ui/root/music/scrollingTitle.module.css
+++ b/src/ui/root/music/scrollingTitle.module.css
@@ -26,9 +26,11 @@
 @media (max-width: 400px) {
   .text {
     font-size: 13px;
+    -webkit-text-size-adjust: 100%;
   }
 
   .marqueeText {
     font-size: 13px;
+    -webkit-text-size-adjust: 100%;
   }
 }
